--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.sasd.appcotizacion/com.sasd.appcotizacion.HelloApplication</mainClass>
+                            <mainClass>com.sasd.appcotizacion.views.MainView</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
